# ndsu3lib

./: .gitignore  ACKNOWLEDGEMENTS.md  CITATION.cff  CMakeLists.txt  Config.cmake.in  Findmpfun20.cmake  Findwigxjpf.cmake  INSTALL.md  I_S_module.F90  I_S_module.f90  LICENSE.md  README.md  Z_coeff.f90  Z_coeff_wrapper.f90  binomial_coeff.F90  binomial_coeff.f90  binomial_coeff_factorials.F90  binomial_coefficients_and_factorials.F03  c++wrappers.cpp  c++wrappers.h  calculate_9_lambda_mu.f90  calculate_U_coeff.F90  calculate_Z_coeff.F90  calculate_extremal_SU3_SU2xU1_Wigner_coefficients.F03  calculate_u_coeff.F90  calculate_wigner_canonical.f90  calculate_wigner_su3so3.F90  calculate_z_coeff.F90  clebsch_gordan.f90  cmake_install_notes.txt  delta.f90  derived_data_types_and_operators.F03  derived_types.f90  example_output.txt  fetch_declarations.cmake  ford-project.md  inner_multiplicity.f90  module.mk  ndsu3lib.h  ndsu3lib_coupling_canonical.F90  (+45 more)
